Excerpt: fix color on full-bleed utilities

--- a/static/styles/components/excerpt.scss
+++ b/static/styles/components/excerpt.scss
@@ -6,6 +6,10 @@
   font-weight: 700;
   line-height: 1.4;
 
+  &--is-inverted {
+    color: white;
+  }
+
   @include mq($from: tablet) {
     font-size: 2.5rem;
   }
